# loseit-mcp

./: .gitignore  Dockerfile  README.md  compose.yml
.github/workflows/: build.yml
client/: README.md  pyproject.toml
client/docs/: wire-format.md
client/src/: __init__.py  __main__.py  auth.py  bundle.py  client.py  db.py  food_search.py  pb.py  transport.py
client/tests/: test_bundle_build.py  test_bundle_shape.py  test_food_search_decode.py  test_pb.py
mcp/: .env.example  README.md  pyproject.toml
mcp/docs/: claude-project-prompt.md
mcp/src/: __init__.py  __main__.py  app.py  config.py  loseit_bootstrap.py  oauth.py  oauth_store.py  tools.py  verifier.py
mcp/tests/: conftest.py  test_mcp_endpoint.py  test_oauth_edges.py  test_verifier.py
