[project]
name = "loseit-client"
version = "0.1.0"
description = "Unofficial Python client for LoseIt!'s private sync API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Felix" },
]
keywords = ["loseit", "nutrition", "food-tracking", "reverse-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31",
]

[project.scripts]
loseit-client = "loseit_client.__main__:main"

[project.urls]
Homepage = "https://github.com/felix/loseit-client"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["loseit_client"]

[tool.setuptools.package-dir]
loseit_client = "src"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
