[project]
name = "loseit-mcp"
version = "0.1.0"
description = "Remote MCP server wrapping loseit-client, for use with claude.ai Custom Integrations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "loseit-client",
    "mcp>=1.2",
    "starlette>=0.37",
    "uvicorn[standard]>=0.30",
    "authlib>=1.3",
    "itsdangerous>=2.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.scripts]
loseit-mcp = "loseit_mcp.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["loseit_mcp"]

[tool.setuptools.package-dir]
loseit_mcp = "src"

[tool.uv.sources]
loseit-client = { path = "../client", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "httpx>=0.27",
]
